issue #4023 - use FHIRPersistenceTransaction instead of ITransactionProvider
Signed-off-by: Lee Surprenant <lmsurpre@merative.com>